# iva-BLDC_Convey

./: .gitignore
app/: AdvancedSettingsControl.xaml  AdvancedSettingsControl.xaml.cs  App.xaml  AppShellControl.xaml  AppShellControl.xaml.cs  AuxUsage.xaml  AuxUsage.xaml.cs  BLDC_Demo.csproj  CommMotorSelectControl.xaml  CommMotorSelectControl.xaml.cs  Connections.xaml  Connections.xaml.cs  FirmwareUploadControl.xaml  FirmwareUploadControl.xaml.cs  LeftMdrControl.xaml  LeftMdrControl.xaml.cs  LookAheadTimingControl.xaml  LookAheadTimingControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MotorControlPanel.xaml  MotorControlPanel.xaml.cs  MotorTemplates.cs  MotorTemplates.xaml  NetworkConfigControl.xaml  NetworkConfigControl.xaml.cs  NetworkService.xaml  NetworkService.xaml.cs  RightMdrControl.xaml  RightMdrControl.xaml.cs
app/BLDC_Demo/: App.xaml  BLDC_Demo.csproj  CommMotorSelectControl.xaml.cs  LeftMdrControl.xaml  LeftMdrControl.xaml.cs  MotorControlPanel.xaml.cs  NetworkConfigControl.xaml  RightMdrControl.xaml  RightMdrControl.xaml.cs
app/BLDC_Demo/Controls/: BL.cs  CommEthernet.cs
app/BLDC_Demo/Models/: ModbusDevice.cs
app/BLDC_Demo/Services/: BLDCService.cs
app/BLDC_Demo_new/BLDC_Demo_new/BLDC_Demo/: App.xaml.cs  AppShellControl.xaml  AppShellControl.xaml.cs  BLDC_Demo.sln  CommMotorSelectControl.xaml  MainWindow.xaml  MainWindow.xaml.cs  MotorControlPanel.xaml  NetworkConfigControl.xaml.cs
app/Controls/: BL.cs  CommEthernet.cs
app/Models/: ModbusDevice.cs
app/ViewModels/: MainViewModel.cs
emb/BLDC_NEW/: BLDC_NEW.ino  esp_eth_ksz8863.c
emb/profinet/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
emb/profinet/components/ksz8863/: CMakeLists.txt  esp_eth_phy_ksz8863.c  esp_eth_pmac_ksz8863.c  ksz8863_ctrl.h
emb/profinet/include/: Profinet.h  ProfinetProperties.hpp  pnal.h  pnet_api.h  pnet_options.h  pnet_version.h
emb/profinet/main/: CMakeLists.txt  profinet.cpp  tool_set_config.json
emb/profinet/src/: CMakeLists.txt  Profinet.cpp  ProfinetInternal.cpp  ProfinetInternal.h  dapModule.h  networktools.cpp  osal.h  osal_sys.h  pf_includes.h  pf_scheduler.c  pf_types.h  pnal.h  pnal_esp32.c  raw_lldp_task.h
emb/profinet/src/common/: pf_cpm_driver_sw.c  pf_dcp.c  pf_lldp.c  pf_ppm.c  pf_ppm_driver_sw.c  pf_scheduler.c
emb/profinet/src/device/: pf_cmdev.c  pf_cmrpc.c  pf_cmrpc_epm.c  pf_pdport.c
emb/profinet/src/pugixml/: pugiconfig.hpp
emb/profinet_test/: CMakeLists.txt  sdkconfig  tool_set_config.json
emb/profinet_test/components/ksz8863/: ksz8863_ctrl.c  (+2 more)
emb/profinet_test/main/: CMakeLists.txt  profinet_test.c  profinet_test.c.txt
(+5 files in other folders)
